--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                   window.addEventListener('load', function() {
                     calendar.schedulingButton.load({
                       url: 'https://calendar.google.com/calendar/appointments/schedules/AcZssZ2-xTS2Va31d3zBlDl0SdUZr5eIXjK4pa6hw5sV3dRjpOz3XL_A6-OUK7zn9Eie5GOsStpUuzX9?gv=true',
-                      color: '#039BE5',
+                      color: '#166088',
                       label: 'Book an appointment',
                       target,
                     });
