--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@
                     
                     <p>Currently working in sales and e-commerce while developing personal projects, I'm an ambitious, self-reliant, and goal-oriented individual looking to make an impact in the tech world.</p>
                 </div>
+                <div class="video-intro-container">
+                    <div class="video-buttons">
+                        <button id="btn-en" class="video-btn active">English</button>
+                        <button id="btn-de" class="video-btn">German</button>
+                    </div>
+                    <video id="intro-video" controls preload="metadata" width="100%" height="auto" class="fade-in">
+                        <source src="videos/Adrenaline_T01.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                    <div class="video-spinner" id="video-spinner"></div>
+                </div>
                 <div class="skills">
                     <h3>My Skills</h3>
                     <div class="skill-tags">
@@ -167,7 +178,7 @@
                   window.addEventListener('load', function() {
                     calendar.schedulingButton.load({
                       url: 'https://calendar.google.com/calendar/appointments/schedules/AcZssZ2-xTS2Va31d3zBlDl0SdUZr5eIXjK4pa6hw5sV3dRjpOz3XL_A6-OUK7zn9Eie5GOsStpUuzX9?gv=true',
-                      color: '#039BE5',
+                      color: '#166088',
                       label: 'Book an appointment',
                       target,
                     });
